--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- <div class="navbar-fixed"> -->
 		<nav>
 	      <div class="nav-wrapper">
-		      <div class="col 12">
+		      <div class="col s12">
 		      	<a href="#" class="brand-logo" id="logo">CUMTD Departures</a>
 		        <ul id="nav-mobile" class="right side-nav">
 		          <li><a href="#">Home</a></li>
