--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	    </nav>
 	<!-- </div> -->
 		
-	<div class="content col 12">
+	<div class="content col s4">
 
 		<h4>Search Bus Stops</h4>
      	<div angucomplete-alt
